@@ -1,3 +1,3 @@
 #!/bin/bash
 
-sudo su - -c "rm -rf installer*; wget http://dev.gentoo.org/~agaffney/gli/snapshots/installer-$(wget -O - http://dev.gentoo.org/~agaffney/gli/ 2>/dev/null | grep -e 'installer-' | sed -e 's:^.\+>installer-::' -e 's:\.tar\.bz2.\+$::').tar.bz2; tar -xjf $(ls -1t installer-*.tar.bz2 | head -n 1); cd installer/src/fe/dialog; ./gli-dialog.py"
+sudo su - -c "rm -rf installer*; wget http://dev.gentoo.org/~agaffney/gli/snapshots/installer-\$(wget -O - http://dev.gentoo.org/~agaffney/gli/ 2>/dev/null | grep -e 'installer-' | sed -e 's:^.\+>installer-::' -e 's:\.tar\.bz2.\+$::').tar.bz2; tar -xjf \$(ls -1t installer-*.tar.bz2 | head -n 1); cd installer/src/fe/dialog; ./gli-dialog.py"
