@@ -1,7 +1,7 @@
 #!/bin/bash
 
 xhost +
-sudo su - -c "rm -rf installer*; wget http://dev.gentoo.org/~agaffney/gli/snapshots/installer-$(wget -O - http://dev.gentoo.org/~agaffney/gli/ 2>/dev/null | grep -e 'installer-' | sed -e 's:^.\+>installer-::' -e 's:\.tar\.bz2.\+$::').tar.bz2; tar -xjf $(ls -1t installer-*.tar.bz2 | head -n 1); cd installer/src/fe/gtk; env DISPLAY=:0.0 ./gtkfe.py"
+sudo su - -c "rm -rf installer*; wget http://dev.gentoo.org/~agaffney/gli/snapshots/installer-\$(wget -O - http://dev.gentoo.org/~agaffney/gli/ 2>/dev/null | grep -e 'installer-' | sed -e 's:^.\+>installer-::' -e 's:\.tar\.bz2.\+$::').tar.bz2; tar -xjf \$(ls -1t installer-*.tar.bz2 | head -n 1); cd installer/src/fe/gtk; env DISPLAY=:0.0 ./gtkfe.py"
 
 #sudo su -
 
