@@ -1,9 +1,15 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.424 2005/10/18 16:18:26 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.425 2005/10/19 20:24:02 agaffney Exp $
 
 *GLI-0.3 (17 Oct 2005)
+
+  19 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/templates/x86ArchitectureTemplate.py:
+  change call to 'grub' to use GLIUtility.exitsuccess()
+  src/misc/updategtkfe, src/misc/updateglid:
+  fix so subshell is called in root shell
 
   18 Oct 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/handlers/WebGLIHandler.py:
